# p04

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html  style.css
src/clientes/: main.py
src/core/: models.py  rabbitmq.py  security.py
src/ms_gateway/: main.py  manager.py  service.py
src/ms_notificacao/: email_service.py  main.py
src/ms_promocao/: main.py
src/ms_ranking/: main.py
src/scripts/: load_test.py
