[project]
name = "p02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.3",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (ordenação de imports)
    "N",    # pep8-naming
    "UP",   # pyupgrade (syntax moderna)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # regras específicas do ruff
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
